--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/tomgb/laser-chess#readme",
   "dependencies": {
+    "colors": "^1.3.2",
     "node-console-input": "^1.1.1"
   }
 }
