--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/tomgb/laser-chess#readme",
   "dependencies": {
     "node-console-input": "^1.1.1"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0"
   }
 }
