updated npm scripts

--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "app.js",
   "scripts": {
     "test": "jest",
-    "test-int": "jest ./integration-tests"
+    "test-int": "jest ./integration-tests",
+    "restart": "node app.js",
+    "start": "node app.js"
+
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tomgb/laser-chess.git"
   },
-  "author": "",
+  "author": "Tom Banister",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/tomgb/laser-chess/issues"
