--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,9 @@
   },
   "homepage": "https://github.com/tomgb/laser-chess#readme",
   "dependencies": {
+  },
+  "devDependencies": {
+    "jsdoc": "^3.6.3",
     "jest": "^24.9.0"
   }
 }
